// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShardFailureDescription renders matching snapshot given valid properties 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  direction="column"
  gutterSize="none"
>
  <EuiFlexItem
    grow={false}
  >
    <EuiDescriptionList
      className="shardFailureModal__desc"
      columnWidths={
        Array [
          1,
          6,
        ]
      }
      compressed={true}
      descriptionProps={
        Object {
          "className": "shardFailureModal__descValue",
        }
      }
      listItems={
        Array [
          Object {
            "description": 0,
            "title": "Shard",
          },
          Object {
            "description": "repro2",
            "title": "Index",
          },
          Object {
            "description": "script_exception",
            "title": "Type",
          },
        ]
      }
      titleProps={
        Object {
          "className": "shardFailureModal__descTitle",
        }
      }
      type="responsiveColumn"
    />
  </EuiFlexItem>
  <EuiFlexItem
    css={
      Object {
        "map": undefined,
        "name": "1eu43fv",
        "next": undefined,
        "styles": "
          align-self: flex-start;
        ",
        "toString": [Function],
      }
    }
    grow={false}
  >
    <EuiButtonEmpty
      flush="left"
      onClick={[Function]}
      size="s"
    >
      Show details
    </EuiButtonEmpty>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`ShardFailureDescription should show more details when button is pressed 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  direction="column"
  gutterSize="none"
>
  <EuiFlexItem
    grow={false}
  >
    <EuiDescriptionList
      className="shardFailureModal__desc"
      columnWidths={
        Array [
          1,
          6,
        ]
      }
      compressed={true}
      descriptionProps={
        Object {
          "className": "shardFailureModal__descValue",
        }
      }
      listItems={
        Array [
          Object {
            "description": 0,
            "title": "Shard",
          },
          Object {
            "description": "repro2",
            "title": "Index",
          },
          Object {
            "description": "script_exception",
            "title": "Type",
          },
          Object {
            "description": "itsmeyournode",
            "title": "Node",
          },
          Object {
            "description": "runtime error",
            "title": "Reason",
          },
          Object {
            "description": <EuiCodeBlock
              isCopyable={true}
              language="java"
              paddingSize="s"
            >
              return doc['targetfield'].value;
           ^---- HERE
            </EuiCodeBlock>,
            "title": "Script stack",
          },
          Object {
            "description": <EuiCodeBlock
              isCopyable={true}
              language="java"
              paddingSize="s"
            >
              return doc['targetfield'].value;
            </EuiCodeBlock>,
            "title": "Script",
          },
          Object {
            "description": "painless",
            "title": "Lang",
          },
          Object {
            "description": "illegal_argument_exception",
            "title": "Caused by type",
          },
          Object {
            "description": "Gimme reason",
            "title": "Caused by reason",
          },
        ]
      }
      titleProps={
        Object {
          "className": "shardFailureModal__descTitle",
        }
      }
      type="responsiveColumn"
    />
  </EuiFlexItem>
  <EuiFlexItem
    css={
      Object {
        "map": undefined,
        "name": "1eu43fv",
        "next": undefined,
        "styles": "
          align-self: flex-start;
        ",
        "toString": [Function],
      }
    }
    grow={false}
  >
    <EuiButtonEmpty
      flush="left"
      onClick={[Function]}
      size="s"
    >
      Show less
    </EuiButtonEmpty>
  </EuiFlexItem>
</EuiFlexGroup>
`;
